--- a/catalog.html
+++ b/catalog.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
     <title>Страница каталога Device</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="favicon.ico">
   </head>
-
   <body>
     <header class="page-header catalog-page">
       <a><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
       <div class="navigation-search-container">
         <div class="navigation-search">
           <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
-            <label class="navigation-form-label" tabindex="2"><input class="navigation-form-input" type="search"
+            <label class="navigation-form-label" tabindex="0"><input class="navigation-form-input" type="search"
                 name="search" placeholder="Текст поиска"><span class="visually-hidden">Поиск по сайту</span></label>
             <button class="navigation-form-button" type="submit"><span class="search-text">Найти</span></button>
           </form>
@@ -59,7 +57,7 @@
         </ul>
       </nav>
     </header>
-    <main class="catalog-main container">
+    <main class="catalog-main main-container">
       <div class="inner-header-container">
         <header class="inner-header">
           <h1 class="inner-header-title">Моноподы для селфи</h1>
@@ -277,7 +275,7 @@
     <div class="page-footer-container">
       <footer class="page-footer">
         <div class="page-footer-info">
-          <a class="page-footer-logo" href="index.html"><img src="images/logo.svg" alt="DEVICE" width="145"
+          <a class="page-footer-logo" ><img src="images/logo.svg" alt="DEVICE" width="145"
               height="36"></a>
           <p class="page-footer-text">Санкт-Петербург,&nbsp;набережная реки Карповки, 5, литера П.</p>
         </div>
@@ -333,29 +331,4 @@
       </footer>
     </div>
   </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-<!--
-<header>
-  <div class="logo">
-    <a href=""><img src="" alt=""></a>
-  </div>
-  <div class="header__menu">
-    <form class="search-form" action="https://echo.htmlacademy.ru">
-      <div class="search-input">
-        <div class="search-icon"><img src="img/Vector.svg" alt="лупа" width="16px" height="16px"></div>
-        <input class="search-form-input" type="search" name="search" placeholder="Поиск по сайту">
-      </div>
-      <button class="search-form-button" type="submit">Найти</button>
-    </form>
-  </div>
-</header> -->
