--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a class="navigation-link login" href="#">Войти</a>
           <div class="compare-cart">
             <a class="navigation-link compare" href="#">Сравнить</a>
-            <a class="navigation-link cart" href="#">Корзина</a>
+            <a class="navigation-link cart" href="#">Корзина<span class="visually-hidden">2</span></a>
             <div class="popover popover-open">
               <div class="popover-content">
                 <h2 class="popover-title visually-hidden">Корзина</h2>
