--- a/catalog.html
+++ b/catalog.html
@@ -5,10 +5,11 @@
     <title>Страница каталога Device</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
   <body>
     <header class="page-header catalog-page">
-      <a><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
+      <a href="index.html"><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
       <div class="navigation-search-container">
         <div class="navigation-search">
           <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
@@ -245,20 +246,20 @@
                   </li>
                   <li class="pagination-list-wrap">
                     <ul class="pagination-list">
-                      <li class="pagination-item  pagination-item-active">
-                        <a class="pagination-link" href="#">1</a>
+                      <li class="pagination-item" tabindex="0">
+                        <a class="pagination-link" href="#" tabindex="-1">1</a>
                       </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link" href="#">2</a>
+                      <li class="pagination-item" tabindex="0">
+                        <a class="pagination-link" href="#" tabindex="-1">2</a>
                       </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link" href="#">3</a>
+                      <li class="pagination-item" tabindex="0">
+                        <a class="pagination-link" href="#" tabindex="-1">3</a>
                       </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link" href="#">...</a>
+                      <li class="pagination-item" tabindex="0">
+                        <a class="pagination-link" href="#" tabindex="-1">...</a>
                       </li>
-                      <li class="pagination-item">
-                        <a class="pagination-link" href="#">15</a>
+                      <li class="pagination-item" tabindex="0">
+                        <a class="pagination-link" href="#" tabindex="-1">15</a>
                       </li>
                     </ul>
                   </li>
@@ -275,7 +276,7 @@
     <div class="page-footer-container">
       <footer class="page-footer">
         <div class="page-footer-info">
-          <a class="page-footer-logo" ><img src="images/logo.svg" alt="DEVICE" width="145"
+          <a class="page-footer-logo" href="index.html"><img src="images/logo.svg" alt="DEVICE" width="145"
               height="36"></a>
           <p class="page-footer-text">Санкт-Петербург,&nbsp;набережная реки Карповки, 5, литера П.</p>
         </div>
