--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header catalog-page">
-      <a href="index.html"><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
+      <a href="index.html" class="logo-link-catalog"><img class="logo-catalog" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
       <div class="navigation-search-container">
         <div class="navigation-search">
           <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
